# PersonalProjects

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
ElectoralCollege/: README.md
data/ElectoralCollege/: Poblacion.csv
