[tool.poetry]
name = "PersonalProject"
version = "0.1.0"
description = ""
authors = ["Camilo Hernandez"]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.6"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
pandas = "^2.2.3"
numpy = "^2.1.1"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
requests = "^2.32.3"
openpyxl = "^3.1.5"
lxml = "^5.3.0"
beautifulsoup4 = "^4.12.3"
cdsapi = "^0.7.3"
pyproj = "^3.6.1"
pyogrio = "^0.10.0"
shapely = "^2.0.6"
folium = "^0.17.0"
mapclassify = "^2.8.1"
geopandas = "^1.0.1"
dask = "^2024.9.1"
xarray = "^2024.9.0"
netcdf4 = "^1.7.1.post2"
earthkit-data = {extras = ["all"], version = "^0.10.7"}
plotly = "^5.24.1"
chart-studio = "^1.1.0"
mplfinance = "^0.12.10b0"
hydrogenerate = "^1.3.0"
dataretrieval = "^1.0.11"
yfinance = "^0.2.48"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10
